# arena

./: .gitignore  README.md  THREE_SCENARIO_ANALYSIS.md  pyproject.toml  run.sh
arena/: __init__.py  evaluator.py  mcp_http_server.py  mcp_server.py  mcp_server_v2.py  metrics.py  runner.py  runner_simple.py  scenarios.py
arena/frameworks/: __init__.py  aws_strands_agent.py  aws_strands_multiagent.py  base.py  claude_sdk_agent.py  crewai_agent.py  crewai_multiagent.py  google_adk_agent.py  google_adk_multiagent.py  langchain_agent.py  langchain_multiagent.py  langgraph_agent.py  langgraph_multiagent.py
arena/results/: FINAL_RESULTS.md  claude_sdk_results.json  combined_results.json  combined_results_table.md  (+1 more)
paper/: DELIVERY_COMPLETE.md  ENHANCEMENTS_SUMMARY.md  PAPER_SUMMARY.md  README.md  SUPPLEMENTARY_MATERIALS.md  arena_acm_paper.aux  arena_acm_paper.out  arena_acm_paper.tex  arena_acm_paper_enhanced.aux  arena_acm_paper_enhanced.out  arena_acm_paper_enhanced.tex  arena_acm_paper_v2.aux  arena_acm_paper_v2.blg  arena_acm_paper_v2.out  arena_acm_paper_v2.tex  compile_paper.sh  view_papers.sh
parallel_benchmarks/: PARALLEL_ITERATION_COMPARISON.md
scenarios/: README.md
scripts/: generate_combined_results.py  generate_summary.py  run_crewai_only.py  run_final_parallel.py  run_iteration.py  run_new_frameworks.py  run_scenario2.py  run_scenario3.py  run_scenario3_extended.py  run_single_framework.py  test_single_framework.py
test_results/: aws_strands_test.json  claude_sdk_test.json  google_adk_test.json  langchain_test.json  langgraph_test.json
(+58 files in other folders)
